python/test-data/testTypesCollections1.err
Traceback (most recent call last):
  File "test-data/testTypesCollections1.py", line 7, in <module>
    appendSomething(l)
  File "test-data/testTypesCollections1.py", line 4, in appendSomething
    l.append("foo")
WyppTypeError: got value of wrong type
given:    'foo'
expected: value of type int

context: list[int]
              ^^^
declared at: test-data/testTypesCollections1.py:3
caused by: test-data/testTypesCollections1.py:4
  |     l.append("foo")
